# straight-skeleton

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: ALGORITHM.md  DESIGN.md
examples/: bench.rs  compare.rs  roof.rs  snapshot.rs  svg.rs
src/: interop.rs  lib.rs  math.rs  point.rs  polygon.rs  predicates.rs  roof.rs  skeleton.rs  wavefront.rs
tests/: constrained.rs  roof.rs  skeleton.rs
tests/common/: mod.rs
